# nano-diffusion-lm

./: Dockerfile  README.md  build_docker.sh  pyproject.toml
configs/: nanogpt.yaml
src/nano_diffusion_lm/: __init__.py  cached_fineweb10b.py  fineweb.py  train_small.py
