[project]
name = "nano-diffusion-lm"
version = "0.1.0"
description = "Diffusion LM Speedrun"
readme = "README.md"
authors = [
    { name = "Justin Chiu", email = "chiu.justin.t@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.33.1",
    "numpy>=2.2.6",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
